--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <h2>Backend end Developer</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="https://t.snapchat.com/iNix3YY"><img src="https://img.icons8.com/nolan/64/snapchat-squared.png" /></a>
+          <a href="https://t.snapchat.com/y66kwjDy"><img src="https://img.icons8.com/nolan/64/snapchat.png" /></a>
         </div>
         <div class="social-item">
           <a href="https://www.linkedin.com/in/omer-awad-307543245"><img src="https://img.icons8.com/nolan/64/linkedin.png" /></a>
